--- a/references.bib
+++ b/references.bib
@@ -2490,3 +2490,92 @@ Related Algorithms},
     note = {R package version 1.1-1},
     url = {https://CRAN.R-project.org/package=dbscan},
   }
+
+
+@article{Gravel2013,
+abstract = {There is great scientific and popular interest in understanding the genetic history of populations in the Americas. We wish to understand when different regions of the continent were inhabited, where settlers came from, and how current inhabitants relate genetically to earlier populations. Recent studies unraveled parts of the genetic history of the continent using genotyping arrays and uniparental markers. The 1000 Genomes Project provides a unique opportunity for improving our understanding of population genetic history by providing over a hundred sequenced low coverage genomes and exomes from Colombian (CLM), Mexican-American (MXL), and Puerto Rican (PUR) populations. Here, we explore the genomic contributions of African, European, and especially Native American ancestry to these populations. Estimated Native American ancestry is 48{\%} in MXL, 25{\%} in CLM, and 13{\%} in PUR. Native American ancestry in PUR is most closely related to populations surrounding the Orinoco River basin, confirming the Southern American ancestry of the Ta{\'{i}}no people of the Caribbean. We present new methods to estimate the allele frequencies in the Native American fraction of the populations, and model their distribution using a demographic model for three ancestral Native American populations. These ancestral populations likely split in close succession: the most likely scenario, based on a peopling of the Americas 16 thousand years ago (kya), supports that the MXL Ancestors split 12.2kya, with a subsequent split of the ancestors to CLM and PUR 11.7kya. The model also features effective populations of 62,000 in Mexico, 8,700 in Colombia, and 1,900 in Puerto Rico. Modeling Identity-by-descent (IBD) and ancestry tract length, we show that post-contact populations also differ markedly in their effective sizes and migration patterns, with Puerto Rico showing the smallest effective size and the earlier migration from Europe. Finally, we compare IBD and ancestry assignments to find evidence for relatedness among European founders to the three populations.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1306.4021v1},
+author = {Gravel, Simon and Zakharia, Fouad and Moreno-Estrada, Andres and Byrnes, Jake K. and Muzzio, Marina and Rodriguez-Flores, Juan L. and Kenny, Eimear E. and Gignoux, Christopher R. and Maples, Brian K. and Guiblet, Wilfried and Dutil, Julie and Via, Marc and Sandoval, Karla and Bedoya, Gabriel and Oleksyk, Taras K. and Ruiz-Linares, Andres and Burchard, Esteban G. and Martinez-Cruzado, Juan Carlos and Bustamante, Carlos D.},
+doi = {10.1371/journal.pgen.1004023},
+eprint = {arXiv:1306.4021v1},
+file = {:home/murraycadzow/Dropbox/Papers/journal.pgen.1004023.PDF:PDF},
+isbn = {1553-7404 (Electronic)$\backslash$n1553-7390 (Linking)},
+issn = {15537390},
+journal = {PLoS Genetics},
+number = {12},
+pmid = {24385924},
+title = {{Reconstructing Native American Migrations from Whole-Genome and Whole-Exome Data}},
+volume = {9},
+year = {2013}
+}
+
+@article{Auton2015,
+author = {{The 1000 Genomes Project Consortium}},
+doi = {10.1038/nature15393},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2015 - A global reference for human genetic variation.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/The 1000 Genomes Project Consortium - 2015 - A global reference for human genetic variation(2).pdf:pdf},
+issn = {0028-0836},
+journal = {Nature},
+keywords = {1KGP},
+mendeley-tags = {1KGP},
+month = {sep},
+number = {7571},
+pages = {68--74},
+title = {{A global reference for human genetic variation}},
+url = {http://www.nature.com/doifinder/10.1038/nature15393},
+volume = {526},
+year = {2015}
+}
+
+@article{Zeng2006,
+abstract = {By comparing the low-, intermediate-, and high-frequency parts of the frequency spectrum, we gain information on the evolutionary forces that influence the pattern of polymorphism in population samples. We emphasize the high-frequency variants on which positive selection and negative (background) selection exhibit different effects. We propose a new estimator of theta (the product of effective population size and neutral mutation rate), thetaL, which is sensitive to the changes in high-frequency variants. The new thetaL allows us to revise Fay and Wu's H-test by normalization. To complement the existing statistics (the H-test and Tajima's D-test), we propose a new test, E, which relies on the difference between thetaL and Watterson's thetaW. We show that this test is most powerful in detecting the recovery phase after the loss of genetic diversity, which includes the postselective sweep phase. The sensitivities of these tests to (or robustness against) background selection and demographic changes are also considered. Overall, D and H in combination can be most effective in detecting positive selection while being insensitive to other perturbations. We thus propose a joint test, referred to as the DH test. Simulations indicate that DH is indeed sensitive primarily to directional selection and no other driving forces.},
+author = {Zeng, Kai and Fu, Yun-Xin and Shi, Suhua and Wu, Chung-I},
+doi = {10.1534/genetics.106.061432},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Zeng et al. - 2006 - Statistical tests for detecting positive selection by utilizing high-frequency variants.pdf:pdf},
+issn = {0016-6731},
+journal = {Genetics},
+keywords = {Animals,Computer Simulation,Genetic Variation,Models, Genetic,Models, Statistical,Mutation,Polymorphism, Genetic,Selection, Genetic,Sensitivity and Specificity},
+mendeley-groups = {Selection},
+month = {nov},
+number = {3},
+pages = {1431--9},
+pmid = {16951063},
+title = {{Statistical tests for detecting positive selection by utilizing high-frequency variants.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1667063{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {174},
+year = {2006}
+}
+
+@article{Pybus2014,
+abstract = {Searching for Darwinian selection in natural populations has been the focus of a multitude of studies over the last decades. Here we present the 1000 Genomes Selection Browser 1.0 (http://hsb.upf.edu) as a resource for signatures of recent natural selection in modern humans. We have implemented and applied a large number of neutrality tests as well as summary statistics informative for the action of selection such as Tajima's D, CLR, Fay and Wu's H, Fu and Li's F* and D*, XPEHH, $\Delta$iHH, iHS, FST, $\Delta$DAF and XPCLR among others to low coverage sequencing data from the 1000 genomes project (Phase 1; release April 2012). We have implemented a publicly available genome-wide browser to communicate the results from three different populations of West African, Northern European and East Asian ancestry (YRI, CEU, CHB). Information is provided in UCSC-style format to facilitate the integration with the rich UCSC browser tracks and an access page is provided with instructions and for convenient visualization. We believe that this expandable resource will facilitate the interpretation of signals of selection on different temporal, geographical and genomic scales.},
+author = {Pybus, Marc and Dall'olio, Giovanni M and Luisi, Pierre and Uzkudun, Manu and Carre{\~{n}}o-Torres, Angel and Pavlidis, Pavlos and Laayouni, Hafid and Bertranpetit, Jaume and Engelken, Johannes},
+doi = {10.1093/nar/gkt1188},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pybus et al. - 2014 - 1000 Genomes Selection Browser 1.0 a genome browser dedicated to signatures of natural selection in modern humans.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Pybus et al. - 2014 - 1000 Genomes Selection Browser 1.0 a genome browser dedicated to signatures of natural selection in modern huma(2).pdf:pdf},
+issn = {1362-4962},
+journal = {Nucleic acids research},
+mendeley-groups = {Selection/iHS},
+month = {jan},
+number = {1},
+pages = {D903--9},
+pmid = {24275494},
+title = {{1000 Genomes Selection Browser 1.0: a genome browser dedicated to signatures of natural selection in modern humans.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24275494},
+volume = {42},
+year = {2014}
+}
+
+@article{kimura1979neutral,
+author = {Kimura, Motoo},
+doi = {10.1038/scientificamerican1179-98},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Kimura - 1979 - The neutral theory of molecular evolution.pdf:pdf},
+issn = {0036-8733},
+journal = {Scientific American},
+mendeley-groups = {Selection/Neutral Theory},
+month = {nov},
+number = {5},
+pages = {98--126},
+title = {{The neutral theory of molecular evolution}},
+url = {http://www.jstor.org/stable/10.2307/2097289 http://www.jstor.org/stable/2097289 http://www.nature.com/doifinder/10.1038/scientificamerican1179-98},
+volume = {241},
+year = {1979}
+}
